# backend/bookings/booking.model.js
@@ -1,17 +1,10 @@
 import mongoose from "mongoose";
 
 const bookingSchema = new mongoose.Schema({
-  testId: { type: mongoose.ObjectId, ref: "LabTest", required: true },
+  // testId: { type: mongoose.ObjectId, ref: "LabTest", required: true },
   clientId: { type: mongoose.ObjectId, ref: "User", required: true },
   name: { type: String, required: true, trim: true, maxlength: 30 },
   address: { type: String, required: true, trim: true, maxlength: 200 },
-
-  serviceType: {
-    type: String,
-    required: true,
-    enum: ["clinic visit", "home service"],
-  },
-  // note: { type: String, maxlength: 300 },
   date: {
     type: Date,
     required: true,
@@ -20,8 +13,13 @@ const bookingSchema = new mongoose.Schema({
     type: String,
     required: true,
   },
-  testName: { type: String, required: true, trim: true },
 
+  tests: [
+    {
+      testId: { type: mongoose.ObjectId, ref: "LabTest", required: true },
+      name: { type: String, required: true, trim: true },
+    },
+  ],
   status: {
     type: String,
     required: true,
